--- a/InstaProfile.html
+++ b/InstaProfile.html
@@ -1,1 +1,40 @@
 // Start of code
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Instagram Profile Clone</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+    <div class="container">
+        <header class="profile-header">
+            <img src="https://picsum.photos/100" alt="Profile Picture" class="profile-pic">
+            <div class="profile-info">
+                <h2 class="username">will_zellers</h2>
+                <div class="stats">
+                    <span><strong>9</strong> posts</span>
+                    <span><strong>500</strong> followers</span>
+                    <span><strong>300</strong> following</span>
+                </div>
+                <p class="bio">@uncchapelhill </p>
+            </div>
+        </header>
+
+        <section class="gallery">
+            <img src="https://picsum.photos/200/300" alt="Post 1">
+            <img src="https://picsum.photos/200/300" alt="Post 2">
+            <img src="https://picsum.photos/200/300" alt="Post 3">
+            <img src="https://picsum.photos/200/300" alt="Post 4">
+            <img src="https://picsum.photos/200/300" alt="Post 5">
+            <img src="https://picsum.photos/200/300" alt="Post 6">
+            <img src="https://picsum.photos/200/300" alt="Post 7">
+            <img src="https://picsum.photos/200/300" alt="Post 8">
+            <img src="https://picsum.photos/200/300" alt="Post 9">
+        </section>
+    </div>
+
+</body>
+</html>
